<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSecundario"
    tools:context=".SignUpActivity">


    <!--Hijo principal del ScrollView-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="371dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="30dp"
                app:srcCompat="@drawable/tiq_white_svg" />

            <TextView
                android:id="@+id/SignupText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/signupText"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="344dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/borders"
                android:drawableStart="@drawable/imagen_email"
                android:drawablePadding="8dp"
                android:hint="@string/emailEntry"
                android:padding="8dp" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/borders"
                android:drawableStart="@drawable/imagen_lock"
                android:drawablePadding="8dp"
                android:hint="@string/passwordEntry_Signup"
                android:inputType="textPassword"
                android:padding="8dp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/borders"
                android:drawableStart="@drawable/imagen_password"
                android:drawablePadding="8dp"
                android:hint="@string/passwordEntry_Confirmation"
                android:inputType="textPassword"
                android:padding="8dp" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/createAccountButtonText"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/loginRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/LoginRedirectText"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>
    </ScrollView>