<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecundario"
    android:outlineProvider="none"
    tools:context=".ProfileActivity">


    <!--Bottom user interface-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds">


        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimario"
            android:contentDescription="@string/DescriptionCalendarButton"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/calendar" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimario"
            android:contentDescription="@string/DescriptionHomeButton"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home" />


        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimario"
            android:contentDescription="@string/DescriptionProfileButton"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/profile" />
    </LinearLayout>


    <TextView
        android:id="@+id/TextViewPerfil"
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:autoSizeTextType="uniform"
        android:background="@color/colorPrimario"
        android:gravity="center"
        android:text="@string/ProfileText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimario"
        android:textSize="30sp"
        android:gravity="center_vertical"
        android:hint="@string/StringUsername"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:background="@color/colorPrimario"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:hint="@string/StringPassword"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/ShowCredentialsButton"
        android:layout_width="190dp"
        android:layout_height="67dp"
        android:text="@string/ShowCredentialsButtonText"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:layout_constraintVertical_bias="0.14" />


</androidx.constraintlayout.widget.ConstraintLayout>