<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="412dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintBounds">


                <ImageButton
                    android:id="@+id/calendarButton"
                    android:layout_width="11dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimario"
                    android:contentDescription="@string/DescriptionCalendarButton"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/calendar" />

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimario"
                    android:contentDescription="@string/DescriptionHomeButton"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/home" />


                <ImageButton
                    android:id="@+id/profileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimario"
                    android:contentDescription="@string/DescriptionProfileButton"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/profile" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/idRLContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/Tiq_In_Time"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:hint="08:30:00"
                    android:textSize="50dp" />

                <Button
                    android:id="@+id/Tiq_In_Start"
                    android:layout_width="200dp"
                    android:layout_height="128dp"
                    android:layout_below="@id/Tiq_In_Time"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/TiqInText"
                    android:autoSizeTextType="uniform"/>


                <Button
                    android:id="@+id/Tiq_Stop"
                    android:layout_width="111dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/Tiq_In_Start"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/TiqStopText" />


                <Button
                    android:id="@+id/Tiq_Break"
                    android:layout_width="143dp"
                    android:layout_height="68dp"
                    android:layout_below="@id/Tiq_Stop"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="#BAA4E4"
                    android:gravity="center"
                    android:text="@string/TiqBreakText"
                    android:autoSizeTextType="uniform"/>


                <TextView
                    android:id="@+id/Tiq_Break_Time"
                    android:layout_width="140dp"
                    android:layout_height="53dp"
                    android:layout_below="@id/Tiq_Break"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:background="#BAA4E4"
                    android:hint="30:00"
                    android:textSize="40dp" />



        </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

